--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.application.name=DICCIONARIO
-
-spring.datasource.url=jdbc:mysql://localhost:3306/diccionario?useSSL=false&serverTimezone=UTC
+spring.application.name=Diccionario
+spring.datasource.url=jdbc:mysql://localhost:3306/diccionariodb?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
